--- a/line_id.tex
+++ b/line_id.tex
@@ -21,6 +21,7 @@
     \multicolumn{6}{c}{Methanol (\methanol\ $v_\text{t}=0$)} \\
     \hline
     243915.79 (0.01) & [5, 1, 4]\rt[4, 1, 3] A                      & $-$4.22 & 49.66  & 44 & CDMS \\
+    246074.61 (0.02) & [20, 3, 17]\rt[20, 2, 18] A                  & $-$4.08 & 537.03 & 164& CDMS \\
     246873.30 (0.02) & [19, 3, 16]\rt[19, 2, 17] A                  & $-$4.08 & 490.65 & 156& CDMS \\
     261805.68 (0.01) & [2, 1, 1]\rt[1, 0, 1] E                      & $-$4.25 & 28.01  & 20 & CDMS \\
     \hline
@@ -76,6 +77,7 @@
     245883.2 (0.1)   & [20, 13, 7]\rt[19, 13, 6] E                  & $-$3.89 & 235.98 & 82 & JPL  \\
     245885.2 (0.1)   & [20, 13, 7]\rt[19, 13, 6] A                  & $-$3.89 & 235.98 & 82 & JPL  \\
     245885.2 (0.1)   & [20, 13, 8]\rt[19, 13, 7] A                  & $-$3.89 & 235.98 & 82 & JPL  \\
+    245903.7 (0.1)   & [20, 13, 8]\rt[19, 13, 7] E                  & $-$3.89 & 235.97 & 82 & JPL  \\
     246027.5 (0.1)   & [21, 2, 19]\rt[20, 3, 18] E                  & $-$4.63 & 139.85 & 86 & JPL  \\
     246038.9 (0.1)   & [21, 2, 19]\rt[20, 3, 18] A                  & $-$4.63 & 139.85 & 86 & JPL  \\
     246054.8 (0.1)   & [20, 12, 8]\rt[19, 12, 7] E                  & $-$3.84 & 219.43 & 82 & JPL  \\
@@ -90,7 +92,7 @@
     246613.4 (0.1)   & [20, 10, 11]\rt[19, 10, 10] A                & $-$3.77 & 190.34 & 82 & JPL  \\
     246613.4 (0.1)   & [20, 10, 10]\rt[19, 10, 9] A                 & $-$3.77 & 190.34 & 82 & JPL  \\
     246623.2 (0.1)   & [20, 10, 11]\rt[19, 10, 10] E                & $-$3.77 & 190.34 & 82 & JPL  \\
-    246630.0 (0.1)   & [35, 6, 30]\rt[35, 5, 31] A                  & $-$4.77 & 397.98 &142 & JPL  \\
+    % 246630.0 (0.1)   & [35, 6, 30]\rt[35, 5, 31] A                  & $-$4.77 & 397.98 &142 & JPL  \\
     246660.5 (0.1)   & [10, 5, 6]\rt[9, 4, 5] A                     & $-$4.74 & 49.08  & 42 & JPL  \\
     246675.4 (0.1)   & [15, 4, 12]\rt[14, 3, 11] E                  & $-$4.93 & 81.85  & 62 & JPL  \\
     246683.5 (0.1)   & [15, 4, 12]\rt[14, 3, 11] A                  & $-$4.93 & 81.84  & 62 & JPL  \\
@@ -164,6 +166,7 @@
     244218.91 (0.01) & [20, 6, 15]\rt[19, 5, 14] AE                 & $-$3.32 & 139.69 & 250& JPL \\
     244218.92 (0.01) & [20, 5, 15]\rt[19, 6, 14] EA                 & $-$3.32 & 139.69 & 160& JPL \\
     244218.92 (0.01) & [20, 6, 15]\rt[19, 5, 14] EA                 & $-$3.32 & 139.69 & 160& JPL \\
+    245831.34 (0.09) & [13, 10, 3]\rt[12, 9, 4] EE                  & $-$3.80 & 77.84  & 432& JPL \\ 
     246400.99 (0.05) & [34, 7, 28]\rt[34, 5, 29] EE                 & $-$4.17 & 364.98 &1100& JPL \\
     246400.99 (0.05) & [34, 6, 28]\rt[34, 5, 29] EE                 & $-$4.03 & 364.98 &1100& JPL \\
     246400.99 (0.05) & [34, 7, 28]\rt[34, 6, 29] EE                 & $-$4.03 & 364.98 &1100& JPL \\
