--- a/peaches.tex
+++ b/peaches.tex
@@ -190,7 +190,7 @@ Line identification starts with manual identification and verification for a few
 \end{itemize}
 Table\,\ref{tbl:line_id} lists the identified species and transitions.  Only identifiable transitions are listed.  The \textsc{xclass} modeling includes all the transitions in our frequency coverage regardless their Einstein-A values and upper energy levels.  
 
-Systematic spectral fitting using \textsc{xclass} is then applied to all sources using a list of species, compiled from those identifications.  The catalogs used in this study are listed in Appendix\,\ref{sec:catalogs}  The fitting function in \textsc{xclass} includes several optimization algorithms that can be used in series to reduce biases.  We configure the algorithm chain that starts with the genetic algorithm followed by the Levenberg-Marquardt $\chi^{2}$ minimization.  The genetic algorithm searches the best-fitting parameters iteratively with generations that evolve like a natural selection, where the better fitting models get less modification over generations.  We setup the genetic algorithm to search for the three best-fitting models after five generations.  Then, the Levenberg-Marquardt $\chi^{2}$ minimization applies to the three best-fitting models for 50 iterations to the best-fitting models.  We assume the COMs are all concentrated at the center, simplified as a 2D thin circular disk.  There are four parameters for the \textsc{xclass} modeling, the size of the emitting molecule ($r_\text{COM}$), the excitation temperature ($T_\text{ex}$), the column density ($N_\text{COM}$), and the line width ($\Delta \nu$).  Due to the limited frequency coverage, many species only have a few lines detected, we fix $r_\text{COM}$ as 0\farcs{5}, similar to our beam size, and optimize the model with five excitation temperatures, 100, 150, 200, 250, and 300 K.  We allow the line width varying between 1.2\kms\ to 3.5\kms\ for better fitting quality, and the range of the column density for each molecule is chosen according to the strength of the emission.  The range of fitted column densities at different temperatures indicates the uncertainty of the column densities.
+Systematic spectral fitting using \textsc{xclass} is then applied to all sources using a list of species, compiled from those identifications.  The catalogs used in this study are listed in Appendix\,\ref{sec:catalogs}  The fitting function in \textsc{xclass} includes several optimization algorithms that can be used in series to reduce biases.  We configure the algorithm chain that starts with the genetic algorithm followed by the Levenberg-Marquardt $\chi^{2}$ minimization.  The genetic algorithm searches the best-fitting parameters iteratively with generations that evolve like a natural selection, where the better fitting models get less modification over generations.  We setup the genetic algorithm to search for the top two best-fitting models after 30 generations.  Then, the Levenberg-Marquardt $\chi^{2}$ minimization applies to the three best-fitting models for 20 iterations to find the best-fitting models.  The genetic algorithm aims to find possible local minimums and the Levenberg-Marquardt minimization further find the best-fitting models in the local minimums.  The two best-fitting models found by the genetic algorithm often very similar, suggesting that there is only one minimum.  To address the rare cases of two local minimums, we pick the model with the lower $\chi^{2}$ values from the two best-fitting models constrained by the Levenberg-Marquardt minimization.  We assume the COMs are all concentrated at the center, simplified as a 2D thin circular disk.  There are four parameters for the \textsc{xclass} modeling, the size of the emitting molecule ($r_\text{COM}$), the excitation temperature ($T_\text{ex}$), the column density ($N_\text{COM}$), and the line width ($\Delta \nu$).  Due to the limited frequency coverage, many species only have a few lines detected, we fix $r_\text{COM}$ as 0\farcs{5}, similar to our beam size, and optimize the model with five excitation temperatures, 100, 150, 200, 250, and 300 K.  We allow the line width varying between 1.2\kms\ to 3.5\kms\ for better fitting quality, and the range of the column density for each molecule is chosen according to the strength of the emission.  The range of fitted column densities at different temperatures indicates the uncertainty of the column densities.
 
 The uncertainty from the fitting.
 
@@ -224,15 +224,19 @@ We summarize the fraction of sources with detections of molecules in Figure\,\re
 \end{figure*}
 \renewcommand{\thefigure}{\arabic{figure}}
 
+\section{Excitation Temperatures}
+\subsection{\methanol}
+\subsection{\methylformate}
+
+\section{The Spectra of CCH}
+Due to the absorption and irregular line profile, the \textsc{xclass} fitting routine often fails to faithfully reproduce the observed CCH spectra.
+
 \section{Correlations of COMs}
-The chemical evolution of protostars may leave certain patterns in the abundance of molecules as the dynamical evolution determines the density and temperature structures, regulating chemical reactions.  Thus, the abundance of COMs and their correlations provide critical information to constrain the chemical evolution at embedded protostars.  The fitted column density of COMs indicates the abundance of COMs around protostars.  Typically COMs are locked into the ices on dust grains at outer envelope.  \textcolor{red}{The formation of COMs at diffuse clouds relies on non-thermal process, such as cosmic rays, whose contribution is negligible compared to the central warm region.}  Therefore, we take the column density of COMs as a proxy of the abundance of COMs.  
+The chemical evolution of protostars may leave certain patterns in the abundance of molecules as the dynamical evolution determines the density and temperature structures, regulating chemical reactions.  Thus, the abundance of COMs and their correlations provide critical information to constrain the chemical evolution at embedded protostars.  The fitted column density of COMs indicates the abundance of COMs around protostars.  Typically COMs are locked into the ices on dust grains at outer envelope. Therefore, we take the column density of COMs as a proxy of the abundance of COMs.  
 
-As described in Section\,\ref{sec:modeling}, we fit the column density and line width with different excitation temperatures, which result in a range of column density as its uncertainty.  The comparison between CCH and \methanol\ shows no correlation between these two molecules (Figure\,\ref{fig:cch_ch3oh}), similar to the conclusion in \citet{2018ApJS..236...52H}.  The single dish survey by \citet{2016ApJ...833..125G} shows a correlation between C$_{4}$H, a more complex carbon-chain molecules, and \methanol.  Outflow activity can promote the formation of CCH, which is more efficiency at warm temperature.  In face, the morphology of CCH often traces the outflow cavities seen from CS.  Therefore, the lack of correlation between CCH and \methanol\ may be affected by outflows.
+As described in Section\,\ref{sec:modeling}, we fit the column density and line width with different excitation temperatures, resulting in a range of column density as its uncertainty.  The comparison between CCH and \methanol\ shows no correlation between these two molecules (Figure\,\ref{fig:cch_ch3oh}), similar to the conclusion in \citet{2018ApJS..236...52H}.  The single dish survey by \citet{2016ApJ...833..125G} shows a correlation between C$_{4}$H, a more complex carbon-chain molecules, and \methanol.  Outflow activity can promote the formation of CCH, which is more efficiency at warm temperature.  In face, the morphology of CCH often traces the outflow cavities seen from CS.  Therefore, the lack of correlation between CCH and \methanol\ may be affected by outflows.
 
-Figure\,\ref{fig:corner} shows the correlations of several COMs selected from their detection rates.  The column density of \methanol\ best correlates with that of \methylcyanide.  \citet{2020A&A...635A.198B} also found the tight correlation between these two molecules.  
-
-Similar column densities of \methylformate\ and \dimethylether\ indicate a tight correlation
-
+Figure\,\ref{fig:corner} shows the correlations of several COMs selected from their detection rates.  The column density of \methanol\ best correlates with that of \methylcyanide.  \citet{2020A&A...635A.198B} also found the tight correlation between these two molecules.  The column densities of \dimethylether\ and \methylformate\ also show a tight correlation.  To quantify the goodness of correlation, we calculate the Pearson's correlation coefficient ($r$), which tests the linearity of two variables.  A simple calculation of the Pearson's correlation coefficient would ignore the uncertainties of the column density as well as the upper limits.  Thus, we use the bootstrapping method to sample the fitted column densities and upper limits to calculate Pearson's $r$.  For detections, we assume a normal distribution centers on the best-fitted values with the uncertainty as the width of the normal distribution; for non-detections, we assume a normal distribution centers at zero with a width of one third of the upper limit, which is the 3$\sigma$ upper limit.  Figure\,\ref{fig:pearson_distribution} shows the distributions of the Pearson's $r$ for the correlation between \methanol\ and \methylformate\ after 10000 resampling for all derived column densities (detections \&\ non-detections) and the detection-only sample.  With the detection-only sample, the mean Pearson's $r_{d}$ is 0.92, as expected for a tight correlation, with a Gaussian-like distribution skewed toward lower values.  After including the upper limits, the mean Pearson's $r$ decreases to 0.65 with larger uncertainty (the 95\%\ credible interval increases by 76\%).  If we take $r \geq 0.5$ and $r_{d} \geq 0.9$ as the criteria for having correlations, \textcolor{red}{(to be updated after updating the figure).}  
 
 \begin{figure}[htbp!]
   \centering
@@ -241,10 +245,17 @@ Similar column densities of \methylformate\ and \dimethylether\ indicate a tight
   \label{fig:cch_ch3oh}
 \end{figure}
 
+\begin{figure}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{pearson_r_ch3oh_ch3cn.pdf}
+  \caption{Distributions of Pearson's correlation coefficient from 10000 resamples drawn from detections $+$ non-detections and only detections.  The legend indicates the mean values of Pearson's $r$ along with the range of the 95\%\ credible interval as the associated uncertainties.}
+  \label{fig:pearson_distribution}
+\end{figure}
+
 \begin{figure*}[htbp!]
   \centering
-  \includegraphics[width=\textwidth]{corner_Ncol.pdf}
-  \caption{Corner plot of the correlations of the column densities between \methanol, \methylcyanide, \methylformate, \dimethylether, \acetaldehyde, \ethylcyanide, and $t$-HCOOH.  The color code follows that in Figure\,\ref{fig:ccg_ch3oh}.  The dashed line indicates equality.}
+  \includegraphics[width=\textwidth]{corner_Ncol_correlations.pdf}
+  \caption{Corner plot of the correlations of the column densities between \methanol, \methylcyanide, \methylformate, \dimethylether, \acetaldehyde, \ethylcyanide, and $t$-HCOOH.  The color code follows that in Figure\,\ref{fig:cch_ch3oh}.  The dashed line indicates equality.  The legends incidcate the Pearson's $r$ for the detection-only sample ($r_{d}$) and the entire sample ($r$) along with the ranges of 95\%\ credible interval.}
   \label{fig:corner}
 \end{figure*}
 
