--- a/peaches.tex
+++ b/peaches.tex
@@ -199,7 +199,6 @@ The uncertainty from the fitting.
 
 \section{Continuum Opacity}
 
-
 \section{Detection Statistics}
 We summarize the fraction of sources with detections of molecules in Figure\,\ref{fig:stats}.  The detection statistics include COMs, carbon-chain molecules, and the simple organic molecules, such as CS, \htcn, SO, $^{34}$SO, and SO$_{2}$.  The PEACHES protostars show a great chemical diversity from no molecule detected (\textcolor{red}{B1-bN}) to rich spectra of COMs (e.g. Per-emb-12B).  Detections of COMs and the number of COMs detected show no obvious correlation with the bolometric luminosity and bolometric temperature of the protostars, which are conventional evolutionary indicators.  Low luminosity sources have fewer COMs detected; however, if COMs mostly come from thermally desorption, the region with $T > T_\text{desorption}$ may be smaller for the low luminosity sources, making the emission of COMs fainter and reducing our sensitivity to detect COMs.  We also compare the detection statistics with the mass derived from 9\,mm observations that resolved the sources as a proxy of the central mass \citep{2018ApJS..238...19T}.  The detection statistics show no clear correlation with the central mass; however, the sources with smaller central mass have fewer detections of COMs, \textcolor{red}{which may due to their low luminosity.}  
 
@@ -226,6 +225,127 @@ We summarize the fraction of sources with detections of molecules in Figure\,\re
 
 \section{Excitation Temperatures}
 \subsection{\methanol}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID01_2.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID01_2_rot_temps.pdf}
+  \caption{The methanol rotational diagram for L1448 IRS3A and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID02.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID02_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 26 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID03.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID03_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 22A and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID03_2.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID03_2_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 22B and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID06.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID06_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 17 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID00.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID00_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 44 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID01_2.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID01_2_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 12B and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID02.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID02_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 13 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID03.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID03_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 27 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID05.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID05_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 21 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID07.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID07_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 35A and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set2_ID12.pdf}
+  \includegraphics[width=0.47\textwidth]{Set2_ID12_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 18 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set1_ID01_2.pdf}
+  \includegraphics[width=0.47\textwidth]{Set1_ID01_2_rot_temps.pdf}
+  \caption{The methanol rotational diagram for L1448 IRS3A and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set3_ID00.pdf}
+  \includegraphics[width=0.47\textwidth]{Set3_ID00_rot_temps.pdf}
+  \caption{The methanol rotational diagram for B1-bS and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=0.47\textwidth]{Set3_ID01.pdf}
+  \includegraphics[width=0.47\textwidth]{Set3_ID01_rot_temps.pdf}
+  \caption{The methanol rotational diagram for Per-emb 29 and the fitted excitation temperature distribution using the bootstraping method.}
+  \label{}
+\end{figure*}
+
 \subsection{\methylformate}
 
 \section{The Spectra of CCH}
