update correlations plots

--- a/peaches.tex
+++ b/peaches.tex
@@ -375,8 +375,15 @@ Figure\,\ref{fig:corner} shows the correlations of several COMs selected from th
 \begin{figure*}[htbp!]
   \centering
   \includegraphics[width=\textwidth]{corner_Ncol_correlations.pdf}
-  \caption{Corner plot of the correlations of the column densities between \methanol, \methylcyanide, \methylformate, \dimethylether, \acetaldehyde, \ethylcyanide, and $t$-HCOOH.  The color code follows that in Figure\,\ref{fig:cch_ch3oh}.  The dashed line indicates equality.  The legends incidcate the Pearson's $r$ for the detection-only sample ($r_{d}$) and the entire sample ($r$) along with the ranges of 95\%\ credible interval.}
+  \caption{Corner plot of the correlations of the column densities between \methanol, \methylcyanide, \methylformate, and \dimethylether.  The color code follows that in Figure\,\ref{fig:cch_ch3oh}.  The dashed line indicates equality.  The legends indicate the Pearson's $r$ for the detection-only sample ($r_{d}$) and the logarithmic ratio of the two molecules (N$_{y}$/N$_{x}$).}
   \label{fig:corner}
+\end{figure*}
+
+\begin{figure*}[htbp!]
+  \centering
+  \includegraphics[width=\textwidth]{corner_Ncol_correlations_minor.pdf}
+  \caption{Corner plot of the correlations of the column densities between \methanol, \methylcyanide, \acetaldehyde, \ethanol, \methylformatev, \acetone, \ethylcyanide, $t$-HCOOH, and \formamide.  The legends are similar to Figure\,\ref{fig:corner}}
+  \label{fig:corner_minor}
 \end{figure*}
 
 \section{Spatial Extent of COMs}
